--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">GeoWav</string>
     <string name="maps_api">AIzaSyC5QSHxk6-DXDKjiC5tTpPdP9LCajr1TQ0</string>
+    <string name="google_client_id">173198777031-5fars1360cfht9dlrei7u9n24blkc7ot.apps.googleusercontent.com</string>
 </resources>
